manifests/base/resources/data-prep/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: data-prep
    chart: data-prep-2.0.9
    heritage: Helm
    release: data-prep
  name: data-prep
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: data-prep
        release: data-prep
    spec:
      containers:
        - command:
            - /bin/sh
            - -c
            - |
              export ENGINEADDRESS=`echo $(QIX_SESSIONS_URI)| cut -d'/' -f3 | cut -d':' -f1`
              export ENGINEPORT=`echo $(QIX_SESSIONS_URI)| cut -d':' -f3 | cut -d'/' -f1`
              export DATAFILESHOST=`echo $(DATA_FILES_URI)| cut -d'/' -f3 | cut -d':' -f1`
              export DATAFILESPORT=`echo $(DATA_FILES_URI)| cut -d':' -f3 | cut -d'/' -f1`
              export QIXDATAFILESHOST=`echo $(QIX_DATA_FILES_URI)| cut -d'/' -f3 | cut -d':' -f1`
              export QIXDATAFILESPORT=`echo $(QIX_DATA_FILES_URI)| cut -d':' -f3 | cut -d'/' -f1`
              export PRECEDENTSHOST=`echo $(PRECEDENTS_URI)| cut -d'/' -f3 | cut -d':' -f1`
              export PRECEDENTSPORT=`echo $(PRECEDENTS_URI)| cut -d':' -f3 | cut -d'/' -f1`
              ./start.sh
          image: qliktech-docker.jfrog.io/data-prep-service:2.196.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: null
            httpGet:
              path: /health
              port: 9072
            periodSeconds: null
          name: main
          ports:
            - containerPort: 9072
          volumeMounts:
            - mountPath: /qlik/apps
              name: apps-storage
            - mountPath: /Apps
              name: apps-storage
      imagePullSecrets:
        - name: artifactory-docker-secret
      volumes:
        - emptyDir: {}
          name: apps-storage
---
