manifests/base/resources/data-prep/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9072"
    prometheus.io/scrape: "true"
  labels:
    app: data-prep
    chart: data-prep-1.12.33
    heritage: Helm
    release: data-prep
  name: data-prep
spec:
  ports:
  - name: data-prep
    port: 9072
    protocol: TCP
    targetPort: 9072
  selector:
    app: data-prep
    release: data-prep
  type: ClusterIP
---
