manifests/base/resources/data-prep/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://data-prep-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/dataprepservice/(.*) /$1 break;
      rewrite (?i)/dataprepservice/(.*) /$1 break;
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: data-prep
    chart: data-prep-1.12.33
    heritage: Helm
    release: data-prep
  name: data-prep
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: data-prep
          servicePort: 9072
        path: /api/dataprepservice/v1/openapi
---
